--- a/src/pages/Navigation.module.css
+++ b/src/pages/Navigation.module.css
@@ -1,17 +1,31 @@
 .container {
     width: 100vw;
     height: 100vh;
-    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start
+}
+
+.containerBackground {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
     background-image: url(../assets/background.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
     background-clip: content-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start
+    transition: all 0.2s ease;
+    z-index: -1;
+}
+
+.containerBackgroundFocus {
+    filter: blur(10px);
 }
 
 .time {
