--- a/src/pages/Navigation.module.css
+++ b/src/pages/Navigation.module.css
@@ -29,7 +29,7 @@
 }
 
 .time {
-    margin: 5rem 0 1rem 0;
+    margin: 2rem 0 0 0;
     font-size: 3rem;
     color: #ffffff;
     font-weight: bold;
@@ -42,40 +42,54 @@
 }
 
 .search {
+    margin: 0 0 2rem 0;
     width: clamp(20rem, 40vw, 40rem);
 
     & input {
-        color: #4DA8DA;
+        color: #6b6b6b;
         background-color: transparent;
     }
 }
 
-.navContainer {
-    position: fixed;
-    bottom: 6rem;
+.group {
+    width: clamp(30rem, 80vw, 70rem);
 }
 
-.navItem {
-    margin: 0 5px;
-    background: rgba(17, 24, 39, 0.6);
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(75, 85, 99, 0.2);
-    border-radius: 5px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 3rem;
-    height: 3rem;
+.groupTitle {
+    color: gray;
+    font-size: 1rem;
+}
+
+.list {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+    padding: 10px;
+}
+
+.listItem {
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
-    transition: all 100ms;
+    border-radius: 5px;
+    padding: 1rem 0;
+    transition: all 100ms ease-in-out;
+
+    & span {
+        color: #b2b2b2;
+        margin-left: 7px;
+    }
 }
 
-.navItem:hover {
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-    color: #747bff;
+.listItem:hover {
+    background-color: rgba(33, 150, 243, 0.9);
     transform: translateY(-2px);
+
+    & span {
+        color: white;
+    }
 }
 
 .footer {
@@ -85,4 +99,38 @@
     display: flex;
     justify-content: center;
     align-items: center
+}
+
+
+@media (max-width: 767px) {
+    .group {
+        width: 80vw;
+    }
+
+    .list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .group {
+        width: 80vw;
+    }
+
+    .list {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+}
+
+@media (min-width: 1024px) {
+
+    .group {
+        width: clamp(30rem, 70vw, 70rem);
+    }
+
+    .list {
+        grid-template-columns: repeat(6, 1fr);
+    }
+
 }
