--- a/src/pages/Bookmark.module.css
+++ b/src/pages/Bookmark.module.css
@@ -1,6 +1,26 @@
 .container {
 }
 
+.searchContainer {
+    width: 100%;
+}
+
+.search {
+    width: 80%;
+}
+
+.time {
+    font-size: 3rem;
+    color: #333333;
+    font-weight: bold;
+}
+
+.date {
+    color: #333333;
+    margin: 0 0 2rem 0;
+    font-size: 1rem;
+}
+
 .group {
     width: 100%;
     background: #fefefe;
