--- a/src/pages/Index.module.css
+++ b/src/pages/Index.module.css
@@ -1,10 +1,6 @@
 .container {
     width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start
+    height: 100%;
 }
 
 .containerBackground {
@@ -29,15 +25,14 @@
 }
 
 .time {
-    margin: 2rem 0 0 0;
     font-size: 3rem;
-    color: #ffffff;
+    color: #333333;
     font-weight: bold;
 }
 
 .date {
+    color: #333333;
     margin: 0 0 2rem 0;
-    color: rgba(255, 255, 255, 0.6);
     font-size: 1rem;
 }
 
@@ -74,16 +69,17 @@
 }
 
 .listItem {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 5px;
     padding: 1rem 0;
     transition: all 100ms ease-in-out;
+    width: 7rem;
 
     & span {
-        color: #b2b2b2;
+        color: #000000;
         margin-left: 7px;
     }
 }
