--- a/src/layouts/BaseLayout.module.css
+++ b/src/layouts/BaseLayout.module.css
@@ -2,10 +2,11 @@
     width: 100%;
     height: 100%;
     min-height: 100dvh;
+    overflow-x: hidden;
 }
 
 .titleContainer {
-    width: clamp(100vw, 100vw, 768px);
+    width: clamp(100%, 100vw, 768px);
     padding: 1rem;
 }
 
