--- a/src/pages/Bookmark.module.css
+++ b/src/pages/Bookmark.module.css
@@ -1,4 +1,7 @@
 .container {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 .searchContainer {
@@ -53,29 +56,79 @@
     padding: 10px;
 }
 
-.listItem {
+.dragContainer {
     background-color: rgba(33, 150, 243, 0.5);
+    border-radius: 4px;
+    padding: 1rem 0.5rem;
+    cursor: pointer;
+    width: 10rem;
+
+    .dragIcon {
+    }
+
+    .dragTitle {
+        margin-left: 5px;
+    }
+
+    .dragDrag {
+        opacity: 0;
+    }
+
+    .dragEdit {
+        opacity: 0;
+    }
+}
+
+.dragContainerDrag {
+    background-color: rgba(33, 150, 243, 0.3);
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 4px;
-    padding: 1rem 0;
-    /*transition: all 100ms ease-in-out;*/
+    padding: 1rem 0.5rem;
     cursor: pointer;
 
-    & span {
-        color: #323232;
-        margin-left: 7px;
+
+    .dragIcon {
+
+    }
+
+    .dragTitle {
+        color: #747bff;
+        margin-left: 5px;
+    }
+
+    .dragDrag {
+
+    }
+
+    .dragEdit {
+
     }
 }
 
-.listItem:hover {
+.dragContainer:hover {
     background-color: rgba(33, 150, 243, 0.9);
-    /*transform: translateY(-2px);*/
 
-    & span {
+    .dragIcon {
         color: white;
     }
+
+    .dragTitle {
+        margin-left: 5px;
+        color: white;
+    }
+
+    .dragDrag {
+        opacity: 1;
+        color: white;
+    }
+
+    .dragEdit {
+        opacity: 1;
+        color: white;
+    }
+
 }
 
 .modalContainer {
