--- a/src/pages/Index.module.css
+++ b/src/pages/Index.module.css
@@ -68,7 +68,7 @@
     padding: 10px;
 }
 
-.listItem {
+.dragContainer {
     background-color: rgba(0, 0, 0, 0.3);
     display: flex;
     align-items: center;
@@ -84,7 +84,7 @@
     }
 }
 
-.listItem:hover {
+.dragContainer:hover {
     background-color: rgba(33, 150, 243, 0.9);
     transform: translateY(-2px);
 
