--- a/src/pages/Bookmark.module.css
+++ b/src/pages/Bookmark.module.css
@@ -1,7 +1,6 @@
 .container {
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
 }
 
 .searchContainer {
@@ -32,7 +31,7 @@
 .groupTitle {
     color: gray;
     font-size: 1rem;
-    margin-right: 5px;
+    margin-top: 1rem;
 }
 
 .groupOperateSort {
@@ -50,6 +49,7 @@
 
 .list {
     width: 90%;
+    margin-top: 1rem;
 }
 
 .dragContainer {
@@ -57,7 +57,7 @@
     border-radius: 4px;
     padding: 1rem 0.5rem;
     cursor: pointer;
-    width: 12rem;
+    width: 10rem;
 
     .dragIcon {
     }
@@ -67,11 +67,11 @@
     }
 
     .dragDrag {
-        opacity: 0;
+        opacity: 0.2;
     }
 
     .dragEdit {
-        opacity: 0;
+        opacity: 0.2;
     }
 }
 
