--- a/src/pages/Bookmark.module.css
+++ b/src/pages/Bookmark.module.css
@@ -55,68 +55,50 @@
 .dragContainer {
     background-color: rgba(33, 150, 243, 0.5);
     border-radius: 4px;
-    padding: 1rem 0.5rem;
+    padding: 1rem 0;
     cursor: pointer;
+    user-select: none;
     width: 10rem;
-
-    .dragIcon {
-    }
-
-    .dragTitle {
-        margin-left: 5px;
-    }
+    opacity: 1;
+    z-index: 1;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
+    position: relative;
 
     .dragDrag {
-        opacity: 0.1;
+        opacity: 0;
     }
 
     .dragEdit {
-        opacity: 0.1;
+        position: absolute;
+        right: 1rem;
+        opacity: 0;
     }
 }
 
 .dragContainerDrag {
-    background-color: rgba(33, 150, 243, 0.3);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: rgba(33, 150, 243, 0.4);
     border-radius: 4px;
-    padding: 1rem 0.5rem;
-    cursor: pointer;
-
-
-    .dragIcon {
-
-    }
-
-    .dragTitle {
-        color: #747bff;
-        margin-left: 5px;
-    }
-
-    .dragDrag {
-
-    }
+    padding: 1rem 0;
+    cursor: grabbing;
+    user-select: none;
+    width: 10rem;
+    opacity: 0.5;
+    z-index: 1000;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
+    position: relative;
 
     .dragEdit {
-
+        position: absolute;
+        right: 1rem;
+        opacity: 0;
     }
 }
 
 .dragContainer:hover {
     background-color: rgba(33, 150, 243, 0.9);
-
-    .dragIcon {
-        color: white;
-    }
+    color: white;
 
     .dragTitle {
-        margin-left: 5px;
-        color: white;
-    }
-
-    .dragDrag {
-        opacity: 1;
         color: white;
     }
 
@@ -124,7 +106,6 @@
         opacity: 1;
         color: white;
     }
-
 }
 
 .modalContainer {
